--- a/NetScan/Cargo.toml
+++ b/NetScan/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 tokio = {version = "1" , features = ["full"]}
 rayon = "1.9"
 futures = "0.3"
+reqwest = {version = "0.12.15" , features = ["blocking"]}
+scraper = "0.23.1"
